{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 66,
  "lineage": "9a7cccc2-978b-26d6-3e95-7fb5d3242e2b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "glue_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408110214432:vpc/vpc-0e5cabb6cf81abb68",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0930669cf23e4709a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-01e796d7596050a08",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vph-group69_001-vpc"
                ]
              }
            ],
            "id": "vpc-0e5cabb6cf81abb68",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cf16d24126427bb4",
            "owner_id": "408110214432",
            "region": "us-east-1",
            "tags": {
              "Name": "vph-group69_001-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408110214432:security-group/sg-0d27f40033381df10",
            "description": "Security group for DMS replication instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d27f40033381df10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL from external (Supabase)",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "data-pipeline-dev-dms-20250716075722309800000001",
            "name_prefix": "data-pipeline-dev-dms-",
            "owner_id": "408110214432",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "data-pipeline-dev-dms-sg",
              "Project": "data-pipeline"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "data-pipeline-dev-dms-sg",
              "Project": "data-pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5cabb6cf81abb68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.glue_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408110214432:security-group/sg-03b2e9838f1b06eab",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b2e9838f1b06eab",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "data-pipeline-dev-lambda-20250716071441352600000001",
            "name_prefix": "data-pipeline-dev-lambda-",
            "owner_id": "408110214432",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "data-pipeline-dev-lambda-sg",
              "Project": "data-pipeline"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "data-pipeline-dev-lambda-sg",
              "Project": "data-pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5cabb6cf81abb68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.glue_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408110214432:vpc-endpoint/vpce-0791b08fb7216ee4f",
            "dns_entry": [
              {
                "dns_name": "vpce-0791b08fb7216ee4f-cl6dnk5k.dms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0791b08fb7216ee4f-cl6dnk5k-us-east-1a.dms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0791b08fb7216ee4f-cl6dnk5k-us-east-1b.dms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0549688OJYFC1HING89"
              },
              {
                "dns_name": "dms.us-east-1.api.aws",
                "hosted_zone_id": "Z0539173M5ZFOKTI9P45"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0791b08fb7216ee4f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06eef898859dacd47",
              "eni-0ba5e8345cf1deb89"
            ],
            "owner_id": "408110214432",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d27f40033381df10"
            ],
            "service_name": "com.amazonaws.us-east-1.dms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.204",
                "subnet_id": "subnet-0528f2c683fc0f3c6"
              },
              {
                "ipv4": "10.0.3.193",
                "subnet_id": "subnet-0a22b772fe453d4e7"
              }
            ],
            "subnet_ids": [
              "subnet-0528f2c683fc0f3c6",
              "subnet-0a22b772fe453d4e7"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "data-pipeline-dev-dms-endpoint",
              "Project": "data-pipeline"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "data-pipeline-dev-dms-endpoint",
              "Project": "data-pipeline"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5cabb6cf81abb68"
          },
          "dependencies": [
            "aws_security_group.dms_sg",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.glue_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:408110214432:vpc-endpoint/vpce-0b982da8ef4d4a2de",
            "dns_entry": [
              {
                "dns_name": "vpce-0b982da8ef4d4a2de-lq9rqukr.kinesis.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b982da8ef4d4a2de-lq9rqukr-us-east-1a.kinesis.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b982da8ef4d4a2de-lq9rqukr-us-east-1b.kinesis.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kinesis.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z088411626U6GSLCO9S8F"
              },
              {
                "dns_name": "data-kinesis.us-east-1.api.aws",
                "hosted_zone_id": "Z05385602P6EA5FD2O170"
              },
              {
                "dns_name": "*.data-kinesis.us-east-1.api.aws",
                "hosted_zone_id": "Z05385602P6EA5FD2O170"
              },
              {
                "dns_name": "control-kinesis.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z022592812Z2QF5TOSTRO"
              },
              {
                "dns_name": "*.control-kinesis.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z022592812Z2QF5TOSTRO"
              },
              {
                "dns_name": "kinesis.us-east-1.api.aws",
                "hosted_zone_id": "Z05385651T3HZUOB6QLPB"
              },
              {
                "dns_name": "control-kinesis.us-east-1.api.aws",
                "hosted_zone_id": "Z0225923NXNG59AGSKBH"
              },
              {
                "dns_name": "*.control-kinesis.us-east-1.api.aws",
                "hosted_zone_id": "Z0225923NXNG59AGSKBH"
              },
              {
                "dns_name": "data-kinesis.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05370121IGZRQB7H046V"
              },
              {
                "dns_name": "*.data-kinesis.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05370121IGZRQB7H046V"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b982da8ef4d4a2de",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-041c8c6ac6d0cf008",
              "eni-04dd42b4b0bc72220"
            ],
            "owner_id": "408110214432",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d27f40033381df10"
            ],
            "service_name": "com.amazonaws.us-east-1.kinesis-streams",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.220",
                "subnet_id": "subnet-0528f2c683fc0f3c6"
              },
              {
                "ipv4": "10.0.3.54",
                "subnet_id": "subnet-0a22b772fe453d4e7"
              }
            ],
            "subnet_ids": [
              "subnet-0528f2c683fc0f3c6",
              "subnet-0a22b772fe453d4e7"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "data-pipeline-dev-kinesis-streams-endpoint",
              "Project": "data-pipeline"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "data-pipeline-dev-kinesis-streams-endpoint",
              "Project": "data-pipeline"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5cabb6cf81abb68"
          },
          "dependencies": [
            "aws_security_group.dms_sg",
            "data.aws_subnets.private_subnets",
            "data.aws_vpc.glue_vpc"
          ]
        }
      ]
    }
  ]
}